--- a/public/index.html
+++ b/public/index.html
@@ -24,12 +24,11 @@
             </header>
             <nav>
                 <ul class="menu__list">
-                    <li class="menu__list__item"><a href="#sobre-mi">Sobre mi</a></li>
                     <li class="menu__list__item"><a href="#skills">Skills</a></li>
                     <li class="menu__list__item"><a href="#hobbies">Hobbies</a></li>
                     <li class="menu__list__item"><a href="#formacion">Formación</a></li>
                     <li class="menu__list__item"><a href="#xp">Proyectos</a></li>
-                    <li id="#form" class="menu__list__item"><a href="#contacto">claudiotorancio@gmail.com</a></li>
+                    <li id="#form" class="menu__list__item"><a href="#contacto">contacto</a></li>
                 </ul>
             </nav>
         </section>
