--- a/public/index.html
+++ b/public/index.html
@@ -225,7 +225,7 @@
             <h2 class="certificacion__section__title">Certificaciones</h2>
             <div class="gallery__box">
                 <div class="gallery-container">
-                    <img src="/public/assets/cert_oracle_alura.svg.png" >
+                    <img src="./assets/cert_oracle_alura.svg.png" >
                     <img src="./assets/cert_oracle_alura-reverso.svg.png">
                     <img src="./assets/argentina_programa_2022.svg.png">
                     <img src="./assets/certificate-ticmas.svg.png">
