corrigiendo codigo de flecha volver inicio

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
     <title> Proyecto Final</title>
@@ -368,12 +369,13 @@
                         </button>
                         <span id="success-message" style="display:none;">¡Mensaje enviado!</span>
                     </form>
+                    
 
 
-                    <a href="#" class="btn-back-to-top"><i class="fa fa-arrow-up"></i></a>
+                    <a href="#" class="btn-volver"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
                     <script>
                         // Selecciona el botón
-                        var btnBackToTop = document.querySelector('.btn-back-to-top');
+                        var btnBackToTop = document.querySelector('.btn-volver');
 
                         // Agrega un evento de desplazamiento para el botón
                         window.addEventListener('scroll', function () {
