--- a/public/index.html
+++ b/public/index.html
@@ -123,15 +123,16 @@
 
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"> <img src="assets/excel_icon.png" alt=""> </li>
-                        <li class="skills__name">Excel</li>
+                        <li class="skills__img"> <img src="assets/phyton_icon.png" alt=""> </li>
+                        <li class="skills__name">Python</li>
+
                     </ul>
                 </div>
 
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"> <img src="assets/autodesk_icon.png" alt=""></li>
-                        <li class="skills__name">Autocad</li>
+                        <li class="skills__img"> <img src="assets/ML_icon.png" alt=""></li>
+                        <li class="skills__name">Macine Learning</li>
                     </ul>
                 </div>
             </div>
@@ -189,12 +190,12 @@
             <div class="academic__courses">
                 <div class="academic__courses__box">
                     <ul class="academic__courses__list">
-                        <li class="academic__courses__item__img"><img src="assets/autocad.png"></li>
+                        <li class="academic__courses__item__img"><img src="assets/ticmas_image.jpg"></li>
                         <li class="academic__courses__item__title">
-                            <h4>Curso intensivo de Autocad y CivilCad 3d</h4>
+                            <h4>Python - Machine Learning</h4>
                         </li>
                         <li class="academic__courses__item__subtitle">
-                            <p>2018</p>
+                            <p>2023</p>
                         </li>
                     </ul>
                 </div>
@@ -213,10 +214,10 @@
                     <ul class="academic__courses__list">
                         <li class="academic__courses__item__img"><img src="assets/ArgPrograma.jpg"></li>
                         <li class="academic__courses__item__title">
-                            <h4>Programacion</h4>
+                            <h4>Programacion Javascript - Ruby</h4>
                         </li>
                         <li class="academic__courses__item__subtitle">
-                            <p>En curso </p>
+                            <p>2023 </p>
                         </li>
                     </ul>
                 </div>
@@ -230,6 +231,7 @@
                     <img src="./assets/cert_oracle_alura-reverso.svg.png">
                     <img src="./assets/argentina_programa_2022.svg.png">
                     <img src="./assets/certificate-ticmas.svg.png">
+                    <img src="./assets/certificate-iESSS.jpg">
                    
                 </div>
                 <button class="prev-btn">&lt;</button>
@@ -337,6 +339,19 @@
                     <div class="experience__description">
                         <span class="experience__repo"><a href="https://github.com/claudiotorancio/AluraHotel"><button
                                     class="experiencia__botao--repo">Repositório</button></a></span>
+
+                    </div>
+                </div>
+            </div>
+            <div class="experience__box1">
+                <img class="experience__img" src="assets/ML_modeloRegresion.png">
+                <div class="experience__info">
+                    <h2 class="experience__title">Ingesta de datos en Jupiter Notebook utilizando la libreria Pandas de Python</h2>
+                    <h3 class="experience__text">Challenge Ticmas</h3>
+                    <div class="experience__description">
+                        <span class="experience__repo"><a
+                                href="https://drive.google.com/drive/folders/16Cx7D4pPb0rjBW15rLMO641dNAXYfUW9?usp=drive_link"><button
+                                    class="experiencia__botao--repo">Repositório en Drive</button></a></span>
 
                     </div>
                 </div>
