--- a/public/index.html
+++ b/public/index.html
@@ -232,6 +232,8 @@
                     <img src="./assets/argentina_programa_2022.svg.png">
                     <img src="./assets/certificate-ticmas.svg.png">
                     <img src="./assets/certificate-iESSS.jpg">
+                    <img src="./assets/ticmas_proc_datos_ml.jpg">
+
                    
                 </div>
                 <button class="prev-btn">&lt;</button>
